[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/CreateScene/Effect.gd" type="Script" id=1]

[node name="Effect" type="HBoxContainer"]
margin_top = 24.0
margin_right = 1714.0
margin_bottom = 48.0
custom_constants/separation = 20
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_top = 5.0
margin_right = 43.0
margin_bottom = 19.0
text = "Effect: "

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 63.0
margin_right = 168.0
margin_bottom = 24.0
text = "relationship"
items = [ "relationship", null, false, 0, null, "inventory", null, false, 1, null ]
selected = 0

[node name="Person" type="LineEdit" parent="."]
margin_left = 188.0
margin_right = 388.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
placeholder_text = "Person"

[node name="Value" type="LineEdit" parent="."]
margin_left = 408.0
margin_right = 466.0
margin_bottom = 24.0
placeholder_text = "Value"

[node name="Button" type="Button" parent="."]
margin_left = 486.0
margin_right = 506.0
margin_bottom = 24.0
text = "X"

[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
